k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: contizu
  labels:
    app: contizu-api
  name: contizu-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contizu-api
  template:
    metadata:
      labels:
        app: contizu-api
    spec:
      containers:
        - image: ghcr.io/thaddeuscleo/contizu-zelivery:0.0.2
          name: contizu-api
          ports:
            - containerPort: 3000
          resources: {}
