k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: contizu-api
  namespace: contizu
  labels:
    app: contizu-api
spec:
  selector:
    app: contizu-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
