k8s/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: contizu-gateway
  namespace: contizu
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - contizu.local
