k8s/dest-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: contizu-api
  namespace: contizu
spec:
  host: contizu-api.contizu.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v3
      labels:
        version: v3
